--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -48,12 +48,19 @@
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:text="Acquire token interactively" />
+    <Button
+        android:id="@+id/LaunchChrome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/AcquireTokenInteractiveForR1"
+        android:layout_centerHorizontal="true"
+        android:text="Launch chrome" />
 
     <Button
         android:id="@+id/AcquireTokenSilentForR1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/AcquireTokenInteractiveForR1"
+        android:layout_below="@+id/LaunchChrome"
         android:layout_centerHorizontal="true"
         android:text="Acquire token silently" />
 </RelativeLayout>
