--- a/automationtestapp/src/main/res/layout/activity_main.xml
+++ b/automationtestapp/src/main/res/layout/activity_main.xml
@@ -109,6 +109,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.75"
+            android:gravity="center_horizontal"
             android:hint="@string/user_homeobjectid" />
 
         <Button
