--- a/automationtestapp/src/main/res/values/colors.xml
+++ b/automationtestapp/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="buttonColor">#7CFC00 </color>
 </resources>
