--- a/automationtestapp/src/main/res/layout/activity_main.xml
+++ b/automationtestapp/src/main/res/layout/activity_main.xml
@@ -90,27 +90,10 @@
         android:layout_height="wrap_content"
         android:text="@string/get_users" />
 
-    <!-- Sign out user layout -->
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/signout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1.0">
+        android:text="@string/sign_out" />
 
-        <EditText
-            android:id="@+id/et_userHomeId"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:gravity="center_horizontal"
-            android:hint="@string/user_homeobjectid" />
-
-        <Button
-            android:id="@+id/signout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:text="@string/sign_out" />
-
-    </LinearLayout>
 </LinearLayout>
