Updating casing of view ids + rename adalLogs -> resultLogs

--- a/automationtestapp/src/main/res/layout/activity_main.xml
+++ b/automationtestapp/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
         android:text="@string/get_users" />
 
     <Button
-        android:id="@+id/signout"
+        android:id="@+id/signOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_out" />
