--- a/sample/src/main/res/layout/fragment_acquire.xml
+++ b/sample/src/main/res/layout/fragment_acquire.xml
@@ -132,6 +132,26 @@
             android:layout_weight="8"
             android:hint="@string/scope_text_hint"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/additional_scope_text" />
+
+        <EditText
+            android:id="@+id/additionalScope"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:hint="@string/scope_text_hint"/>
+    </LinearLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
