--- a/sample/src/main/res/layout/fragment_acquire.xml
+++ b/sample/src/main/res/layout/fragment_acquire.xml
@@ -207,18 +207,27 @@
         android:weightSum="10">
 
         <Button
-            android:id="@+id/btn_expireAccessToken"
+            android:id="@+id/btn_getUsers"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="@string/expire_at_button" />
+            android:text="Get User" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <Button
             android:id="@+id/btn_clearCache"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="@string/clear_cache_button" />
+            android:text="Remove User" />
 
     </LinearLayout>
 
