--- a/sample/src/main/res/layout/fragment_log.xml
+++ b/sample/src/main/res/layout/fragment_log.xml
@@ -23,16 +23,32 @@
   ~ //  THE SOFTWARE.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/activity_main"
     tools:context="com.microsoft.identity.client.sample.MainActivity">
+
 
     <TextView
         android:id="@+id/txt_log"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="0.8"
         android:text="Log data goes here..." />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_clearLogs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="clear logs" />
+
+</LinearLayout>
