--- a/sample/src/main/res/layout/fragment_cache.xml
+++ b/sample/src/main/res/layout/fragment_cache.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ //  Copyright (c) Microsoft Corporation.
   ~ //  All rights reserved.
@@ -24,21 +23,23 @@
   ~ //  THE SOFTWARE.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.microsoft.identity.client.sample.CacheFragment">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_acquire"
-            android:title="AcquireToken" />
-        <item
-            android:id="@+id/nav_result"
-            android:title="Result" />
-        <item
-            android:id="@+id/nav_cache"
-            android:title="Cache" />
-        <item
-            android:id="@+id/nav_log"
-            android:title="Log" />
-    </group>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:visibility="gone" />
 
-</menu>
+    <ListView
+        android:id="@+id/lv_cache"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</RelativeLayout>
