change the logging textbox visibility. If it's gone, appium won't be able to find the control

--- a/automationapp/src/main/res/layout/activity_result.xml
+++ b/automationapp/src/main/res/layout/activity_result.xml
@@ -33,10 +33,10 @@
     <TextView
         android:id="@+id/resultInfo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border"
-        android:layout_weight="1"/>
+        android:layout_weight="0.5"/>
 
     <Button
         android:id="@+id/resultDone"
@@ -48,9 +48,9 @@
 
     <TextView
         android:id="@+id/resultLogs"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal"
-        android:background="@drawable/border"/>
+        android:background="@drawable/border"
+        android:layout_weight="0.2"/>
 </LinearLayout>
