--- a/developersample/src/main/res/layout/activity_main.xml
+++ b/developersample/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0000FF"
+    android:background="#438FFF"
     android:orientation="vertical"
     tools:context="com.microsoft.identity.client.developersample.MainActivity">
 
