--- a/developersample/src/main/res/layout/fragment_graph_data.xml
+++ b/developersample/src/main/res/layout/fragment_graph_data.xml
@@ -22,9 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
-            android:id="@+id/welcome"
-            app:layout_constraintHorizontal_bias="0.195"
-            app:layout_constraintVertical_bias="0.693" />
+            android:id="@+id/welcome" />
 
         <TextView
             android:text="Getting Graph Data..."
