--- a/developersample/src/main/res/layout/fragment_graph_data.xml
+++ b/developersample/src/main/res/layout/fragment_graph_data.xml
@@ -4,9 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.microsoft.identity.client.developersample.GraphData">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +15,7 @@
         <TextView
 
             android:textColor="#FFFFFF"
-            android:textSize="50px"
+            android:textSize="50dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
