--- a/developersample/src/main/res/layout/fragment_signin.xml
+++ b/developersample/src/main/res/layout/fragment_signin.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     tools:context=".SigninFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
