--- a/sample/src/main/res/layout/fragment_signin.xml
+++ b/sample/src/main/res/layout/fragment_signin.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ // Copyright (c) Microsoft Corporation.
   ~ // All rights reserved.
@@ -23,8 +22,28 @@
   ~ // OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
   ~ // THE SOFTWARE.
   -->
-<resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-</resources>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".SigninFragment">
+
+    <LinearLayout
+        android:id="@+id/activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#438FFF"
+        android:orientation="vertical"
+        tools:context="com.microsoft.identity.client.sample.MainActivity">
+
+        <Button
+            android:id="@+id/getToken"
+            android:text="Sign in with Microsoft"
+            android:textColor="#000000"
+            android:background="#FFFFFF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:textAllCaps="false" />
+    </LinearLayout>
+</FrameLayout>
