--- a/msal/src/main/res/layout/http_auth_dialog.xml
+++ b/msal/src/main/res/layout/http_auth_dialog.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp" >
+    android:paddingLeft="@dimen/http_auth_dialog_padding_left"
+    android:paddingRight="@dimen/http_auth_dialog_padding_right" >
 
     <EditText
         android:id="@+id/editUserName"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/http_auth_dialog_username"
-        android:paddingTop="10dp" >
+        android:paddingTop="@dimen/http_auth_dialog_padding_top" >
 
         <requestFocus />
     </EditText>
@@ -25,7 +25,7 @@
         android:ems="10"
         android:hint="@string/http_auth_dialog_password"
         android:inputType="textPassword"
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp" />
+        android:paddingTop="@dimen/http_auth_dialog_padding_top"
+        android:paddingBottom="@dimen/http_auth_dialog_padding_bottom" />
 
 </LinearLayout>
