Minor UX improvements to benchmarker

--- a/pop-benchmarker/src/main/res/layout/activity_main.xml
+++ b/pop-benchmarker/src/main/res/layout/activity_main.xml
@@ -219,5 +219,12 @@
         </LinearLayout>
         <!-- Row End -->
 
+        <Button
+            android:id="@+id/btn_restart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="Restart" />
     </LinearLayout>
+
 </ScrollView>
