--- a/pop-benchmarker/src/main/res/layout/activity_main.xml
+++ b/pop-benchmarker/src/main/res/layout/activity_main.xml
@@ -224,7 +224,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:text="Restart" />
+            android:text="Running Benchmarks... Please wait" />
     </LinearLayout>
 
 </ScrollView>
