--- a/testapps/testapp/src/main/res/layout/fragment_log.xml
+++ b/testapps/testapp/src/main/res/layout/fragment_log.xml
@@ -25,30 +25,38 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/activity_main"
     tools:context="com.microsoft.identity.client.testapp.MainActivity">
 
 
     <TextView
         android:id="@+id/txt_log"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.8"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="@string/log_hint_text" />
 
-    <Button
-        android:id="@+id/btn_clearLogs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/clear_log_button" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_clearLogs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/clear_log_button" />
+
+        <Button
+            android:id="@+id/btn_copyLogs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/copy_log_button" />
+    </LinearLayout>
+
 
 </LinearLayout>
