--- a/testapps/testapp/src/main/res/layout/fragment_result.xml
+++ b/testapps/testapp/src/main/res/layout/fragment_result.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ // Copyright (c) Microsoft Corporation.
   ~ // All rights reserved.
   ~ //
@@ -24,16 +23,26 @@
   ~ // THE SOFTWARE.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.microsoft.identity.client.testapp.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="com.microsoft.identity.client.testapp.MainActivity">
 
     <TextView
         android:id="@+id/txt_result"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="@string/result_hint_text" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_copyAuthResult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/copy_auth_result_button" />
+
+</LinearLayout>
